Add some private subnet NACL rules

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -99,6 +99,8 @@ Resources:
       Parameters:
         EnvironmentType: !Ref EnvironmentType
         VpcId: !Ref Vpc
+        VpcCidrBlock: !GetAtt Vpc.CidrBlock
+        VpcIpv6CidrBlocks: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
