Add memcached cluster on private subnets

--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -14,7 +14,7 @@ Resources:
       VpcId: !Ref VpcId
       Tags:
         - Key: Project
-          Value: platform.prx.org
+          Value: platform.prx.org # TODO
         - Key: Environment
           Value: !Ref EnvironmentType
         - Key: Name
