--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -908,6 +908,31 @@ Resources:
       TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
       TimeoutInMinutes: 40
 
+  New2SharedMemcachedStack:
+    Type: AWS::CloudFormation::Stack
+    Condition: IsStaging
+    Properties:
+      NotificationARNs:
+        - Fn::ImportValue: !Sub ${NotificationsStackName}-CloudFormationNotificationSnsTopic
+      Parameters:
+        VPC: !GetAtt SharedVpcStack.Outputs.VpcId
+        VPCSubnet1: !GetAtt SharedVpcStack.Outputs.PrivateSubnet1Id
+        VPCSubnet2: !GetAtt SharedVpcStack.Outputs.PrivateSubnet2Id
+        VPCSubnet3: !GetAtt SharedVpcStack.Outputs.PrivateSubnet3Id
+        OpsWarnMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsWarnMessagesSnsTopicArn
+        OpsErrorMessagesSnsTopicArn:
+          Fn::ImportValue: !Sub ${NotificationsStackName}-OpsErrorMessagesSnsTopicArn
+        EnvironmentType: !Ref EnvironmentType
+        SourceSecurityGroupId1: !GetAtt SharedAlbStack.Outputs.TargetInstanceSecurityGroupId
+      Tags:
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/shared-memcached.yml
+      TimeoutInMinutes: 40
+
   ProvisionedStack:
     Type: AWS::CloudFormation::Stack
     Condition: IsStaging
@@ -981,7 +1006,7 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TemplateURL: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned.yml
-      TimeoutInMinutes: 20
+      TimeoutInMinutes: 40
 
 Outputs:
   VPCCertificateArn:
