Increase target capacity in staging

--- a/stacks/shared-ecs-asg.yml
+++ b/stacks/shared-ecs-asg.yml
@@ -308,7 +308,10 @@ Resources:
           MaximumScalingStepSize: 10
           MinimumScalingStepSize: 1
           Status: ENABLED
-          TargetCapacity: 72
+          TargetCapacity: !If
+            - IsProduction
+            - 72
+            - 95
         ManagedTerminationProtection: ENABLED
       Tags:
         - Key: Project
