Pass echo service to Networks stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -25,6 +25,7 @@ Parameters:
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
   AmazonSesSmtpCredentialsGeneratorServiceToken: { Type: String }
+  EchoServiceToken: { Type: String }
   EcsAsgOutboundTrafficSecurityGroupId: { Type: "AWS::EC2::SecurityGroup::Id" }
 
   PublishEcrImageTag: { Type: String } #####
@@ -284,6 +285,7 @@ Resources:
         UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
         SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
         SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
+        EchoServiceToken: !Ref EchoServiceToken
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
