--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -30,6 +30,7 @@ Parameters:
   UploadSigningAccessKeyId: { Type: String }
   SharedMemcachedEndpointAddress: { Type: String }
   SharedMemcachedEndpointPort: { Type: String }
+  EchoServiceToken: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
