--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -973,6 +973,7 @@ Resources:
         SharedMemcachedEndpointPort: !GetAtt PrivateSharedMemcachedStack.Outputs.CacheEndpointPort
         AmazonSesSmtpCredentialsGeneratorServiceToken: !GetAtt CustomResourcesStack.Outputs.AmazonSesSmtpCredentialsGeneratorServiceToken
         EcsAsgOutboundTrafficSecurityGroupId: !GetAtt SharedEcsAsgStack.Outputs.OutboundTrafficSecurityGroupId
+        EchoServiceToken: !GetAtt CustomResourcesStack.Outputs.EchoServiceToken
       Tags:
         - Key: Environment
           Value: !Ref EnvironmentType
