--- a/stacks/shared-vpc/public-network-acl.yml
+++ b/stacks/shared-vpc/public-network-acl.yml
@@ -197,7 +197,8 @@ Resources:
   # EGRESS 120
   # Allows outbound traffic on high-numbered ports to all IPs. This generally
   # is for HTTP(S) return traffic to clients on ephemeral ports. Some of the
-  # ports in this range may be denied by other rules.
+  # ports in this range may be denied by other rules. Also used to connect to
+  # databases and other services within the VPC.
   # https://docs.aws.amazon.com/vpc/latest/userguide/vpc-network-acls.html#nacl-ephemeral-ports
   OutboudIpV4TcpEphemeralPortsNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
