Output IPv6 CIDR blocks from shared VPC stack

--- a/stacks/shared-vpc.yml
+++ b/stacks/shared-vpc.yml
@@ -219,8 +219,12 @@ Outputs:
     Description: Resource ID for the VPC
     Value: !Ref Vpc
   VpcCidrBlock:
-    Description: Resource ID for the VPC
+    Description: The IPv4 CIDR block for the VPC
     Value: !GetAtt Vpc.CidrBlock
+  VpcIpv6CidrBlocks:
+    Description: >-
+      A comma-delimited list of IPv6 CIDB blocks associated with the VPC
+    Value: !Join [",", !GetAtt Vpc.Ipv6CidrBlocks]
 
   PublicSubnet1Id:
     Description: ID of public subnet 1
