Pass CIDR blocks to provisioned stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -12,6 +12,8 @@ Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcCidrBlocks: { Type: String }
+  VpcIpv6CidrBlocks: { Type: String }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
   SecretsStackName: { Type: String }
