--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -957,6 +957,8 @@ Resources:
         AlbHttpsListenerArn: !GetAtt SharedAlbStack.Outputs.HttpsListenerArn
         EcsClusterArn: !GetAtt SharedEcsClusterStack.Outputs.EcsClusterArn
         VpcId: !GetAtt SharedVpcStack.Outputs.VpcId
+        VpcCidrBlock: !GetAtt SharedVpcStack.Outputs.VpcIpv6CidrBlocks
+        VpcIpv6CidrBlocks: !GetAtt SharedVpcStack.Outputs.VpcId
         SecretsBase: !GetAtt Constants.SecretsBaseRegion
         EcrRegion: !Ref EcrRegion
         SecretsStackName: !Ref SecretsStackName
