Pass CIDR blocks to Networks stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -272,6 +272,8 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
+        VpcCidrBlocks: !Ref VpcCidrBlocks
+        VpcIpv6CidrBlocks: !Ref VpcIpv6CidrBlocks
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref NetworksEcrImageTag
         SecretsVersion: !Ref NetworksSecretsVersion
