--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -17,6 +17,8 @@ Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
+  VpcCidrBlocks: { Type: String }
+  VpcIpv6CidrBlocks: { Type: String }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
   EcrImageTag: { Type: String }
