Fix parameter name

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -12,7 +12,7 @@ Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcCidrBlocks: { Type: String }
+  VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: String }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
