Fix parameter name

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -272,7 +272,7 @@ Resources:
         AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
         EcsClusterArn: !Ref EcsClusterArn
         VpcId: !Ref VpcId
-        VpcCidrBlocks: !Ref VpcCidrBlocks
+        VpcCidrBlocks: !Ref VpcCidrBlock
         VpcIpv6CidrBlocks: !Ref VpcIpv6CidrBlocks
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref NetworksEcrImageTag
