Fix parameter name

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -23,7 +23,7 @@ Parameters:
   EnvironmentType: { Type: String }
   EnvironmentTypeAbbreviation: { Type: String }
   VpcId: { Type: "AWS::EC2::VPC::Id" }
-  VpcCidrBlocks: { Type: String }
+  VpcCidrBlock: { Type: String }
   VpcIpv6CidrBlocks: { Type: String }
   SecretsBase: { Type: String }
   EcrRegion: { Type: String }
@@ -375,7 +375,7 @@ Resources:
       GroupDescription: >-
         Allows web and Sphinx traffic to the Sphinx server service
       SecurityGroupIngress:
-        - CidrIp: !Ref VpcCidrBlocks
+        - CidrIp: !Ref VpcCidrBlock
           IpProtocol: tcp
           FromPort: 3000
           ToPort: 3000
@@ -383,7 +383,7 @@ Resources:
           IpProtocol: tcp
           FromPort: 3000
           ToPort: 3000
-        - CidrIp: !Ref VpcCidrBlocks
+        - CidrIp: !Ref VpcCidrBlock
           IpProtocol: tcp
           FromPort: 9312
           ToPort: 9312
