--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -951,6 +951,9 @@ Resources:
         CastleEcrImageTag: !Ref CastleEcrImageTag
         CastleSecretsVersion: !Ref CastleSecretsVersion
 
+        CmsEcrImageTag: !Ref CmsEcrImageTag
+        CmsSecretsVersion: !Ref CmsSecretsVersion
+
         TemplateUrlPrefix: !Sub https://${Constants.SourceBucketName}.s3.${AWS::Region}.amazonaws.com/${InfrastructureGitCommit}/stacks/provisioned
         CloudFormationNotificationArn: !GetAtt Constants.CloudFormationNotificationArn
         AlbFullName: !GetAtt SharedAlbStack.Outputs.AlbFullName
