--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -1,4 +1,4 @@
-# stacks/provisioned/remix.yml
+# stacks/provisioned/metrics.yml
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: metrics.prx.org application running in Docker # TODO
@@ -6,10 +6,10 @@ Description: metrics.prx.org application running in Docker # TODO
 Parameters:
   kWebContainerName:
     Type: String
-    Default: remix-web
+    Default: cms-web
   kWorkerContainerName:
     Type: String
-    Default: remix-worker
+    Default: cms-worker
   kApplicationPort:
     Type: Number
     Default: 3000
@@ -26,12 +26,13 @@ Parameters:
   SecretsVersion: { Type: String }
   SecretsStackName: { Type: String }
   NotificationsStackName: { Type: String }
+  SharedMemcachedEndpointAddress: { Type: String }
 
 Conditions:
   IsProduction: !Equals [!Ref EnvironmentType, Production]
 
 Resources:
-  WildcardHostHeaderListenerRule:
+  HostHeaderListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
@@ -40,34 +41,22 @@ Resources:
       Conditions:
         - Field: host-header
           Values:
-            - remix.*
+            - cms.*
       ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 642 # TODO
-  DomainHostHeaderListenerRule:
-    Type: AWS::ElasticLoadBalancingV2::ListenerRule
-    Properties:
-      Actions:
-        - TargetGroupArn: !Ref TargetGroup
-          Type: forward
-      Conditions:
-        - Field: host-header
-          Values:
-            - "*.prx.mx"
-      ListenerArn: !Ref AlbHttpsListenerArn
-      Priority: 643 # TODO
+      Priority: 777 # TODO
 
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
       HealthCheckIntervalSeconds: 15
-      HealthCheckPath: /api
+      HealthCheckPath: /api/v1
       HealthCheckTimeoutSeconds: 5
       HealthyThresholdCount: 3
       Port: 80
       Protocol: HTTP
       TargetGroupAttributes:
         - Key: deregistration_delay.timeout_seconds
-          Value: "15"
+          Value: "30"
       Tags:
         - Key: Project
           Value: Metrics # TODO
@@ -110,27 +99,6 @@ Resources:
         - Name: TargetGroup
           Value: !GetAtt TargetGroup.TargetGroupFullName
 
-  ExecutionRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action: sts:AssumeRole
-            Effect: Allow
-            Principal:
-              Service: ecs-tasks.amazonaws.com
-        Version: "2012-10-17"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
-      Tags:
-        - Key: Project
-          Value: Metrics # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
   TaskRole:
     Type: AWS::IAM::Role
     Properties:
@@ -144,6 +112,27 @@ Resources:
       ManagedPolicyArns:
         - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceDecryptPolicyArn
         - Fn::ImportValue: !Sub ${SecretsStackName}-SecretsInstanceAccessPolicyArn
+      Tags:
+        - Key: Project
+          Value: Metrics # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+  ExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      AssumeRolePolicyDocument:
+        Statement:
+          - Action: sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service: ecs-tasks.amazonaws.com
+        Version: "2012-10-17"
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
       Tags:
         - Key: Project
           Value: Metrics # TODO
@@ -177,6 +166,29 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TaskDefinition: !Ref WebTaskDefinition
+  WorkerEcsService:
+    Type: AWS::ECS::Service
+    Properties:
+      Cluster: !Ref EcsClusterArn
+      DeploymentConfiguration:
+        MaximumPercent: 200
+        MinimumHealthyPercent: 50
+      DesiredCount: 2 # TODO
+      LaunchType: EC2
+      LoadBalancers:
+        - ContainerName: !Ref kWorkerContainerName
+          ContainerPort: !Ref kApplicationPort
+          TargetGroupArn: !Ref TargetGroup
+      Tags:
+        - Key: Project
+          Value: Metrics # TODO
+        - Key: Environment
+          Value: !Ref EnvironmentType
+        - Key: prx:cloudformation:stack-name
+          Value: !Ref AWS::StackName
+        - Key: prx:cloudformation:stack-id
+          Value: !Ref AWS::StackId
+      TaskDefinition: !Ref WebTaskDefinition
 
   WebTaskLogGroup:
     Type: AWS::Logs::LogGroup
@@ -191,7 +203,7 @@ Resources:
           Cpu: 100 # TODO
           Environment:
             - Name: APP_NAME
-              Value: remix
+              Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -200,8 +212,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: MEMCACHE_SERVERS
+              Value: !Ref SharedMemcachedEndpointAddress
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/remix.prx.org:${EcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -239,7 +253,7 @@ Resources:
           Cpu: 100 # TODO
           Environment:
             - Name: APP_NAME
-              Value: remix
+              Value: cms
             - Name: APP_ENV
               Value: !Ref EnvironmentTypeAbbreviation
             - Name: AWS_SECRETS_BASE
@@ -248,8 +262,10 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: MEMCACHE_SERVERS
+              Value: !Ref SharedMemcachedEndpointAddress
           Essential: true
-          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/remix.prx.org:${EcrImageTag}
+          Image: !Sub ${AWS::AccountId}.dkr.ecr.${EcrRegion}.amazonaws.com/cms.prx.org:${EcrImageTag}
           LogConfiguration:
             LogDriver: awslogs
             Options:
@@ -273,46 +289,3 @@ Resources:
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
       TaskRoleArn: !GetAtt TaskRole.Arn
-  WorkerEventsRole:
-    Type: AWS::IAM::Role
-    Properties:
-      AssumeRolePolicyDocument:
-        Statement:
-          - Action: sts:AssumeRole
-            Effect: Allow
-            Principal:
-              Service: events.amazonaws.com
-        Version: "2012-10-17"
-      ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceEventsRole
-      Tags:
-        - Key: Project
-          Value: Remix # TODO
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-  WorkerScheduledRule:
-    Type: AWS::Events::Rule
-    Properties:
-      Description: !Sub Periodically loads ${EnvironmentType} Remix episodes
-      ScheduleExpression: rate(1 hour)
-      State: ENABLED
-      Targets:
-        - Arn: !Ref EcsClusterArn
-          EcsParameters:
-            TaskCount: 1
-            TaskDefinitionArn: !Ref WorkerTaskDefinition
-          Id: RemixWorkerRuleTarget
-          Input: !Sub | # containerOverrides comes from the ECS run-task API
-            {
-              "containerOverrides": [
-                {
-                  "name": "${kWorkerContainerName}",
-                  "command": ["load_episodes"]
-                }
-              ]
-            }
-          RoleArn: !GetAtt WorkerEventsRole.Arn
