Use shorter vanity domain

--- a/stacks/provisioned/networks.yml
+++ b/stacks/provisioned/networks.yml
@@ -49,7 +49,7 @@ Resources:
     Properties:
       ServiceToken: !Ref EchoServiceToken
       SphinxBaseUrl: !Sub https://${Nlb.DNSName}/
-      VanityNlbDomain: !Sub ${Nlb.DNSName}.${EnvironmentTypeAbbreviation}.prx.tech
+      VanityNlbDomain: !Sub ${Nlb.LoadBalancerName}.${AWS::Region}.prx.tech
 
   # INTERNET-FACING WEB SERVER #################################################
 
