Fix task def reference

--- a/stacks/provisioned/cms.yml
+++ b/stacks/provisioned/cms.yml
@@ -188,7 +188,7 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-      TaskDefinition: !Ref WebTaskDefinition
+      TaskDefinition: !Ref WorkerTaskDefinition
 
   WebTaskLogGroup:
     Type: AWS::Logs::LogGroup
