Turn off Networks stack

--- a/stacks/provisioned.yml
+++ b/stacks/provisioned.yml
@@ -293,43 +293,43 @@ Resources:
       TemplateURL: !Sub ${TemplateUrlPrefix}/metrics.yml
       TimeoutInMinutes: 5
 
-  NetworksStack:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      NotificationARNs:
-        - !Ref CloudFormationNotificationArn
-      Parameters:
-        AlbFullName: !Ref AlbFullName
-        AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
-        EcsClusterArn: !Ref EcsClusterArn
-        VpcId: !Ref VpcId
-        VpcCidrBlock: !Ref VpcCidrBlock
-        VpcIpv6CidrBlocks: !Ref VpcIpv6CidrBlocks
-        SecretsBase: !Ref SecretsBase
-        EcrImageTag: !Ref NetworksEcrImageTag
-        SecretsVersion: !Ref NetworksSecretsVersion
-        EcrRegion: !Ref EcrRegion
-        SecretsStackName: !Ref SecretsStackName
-        NotificationsStackName: !Ref NotificationsStackName
-        EnvironmentType: !Ref EnvironmentType
-        EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
-        VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
-        VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
-        VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
-        UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
-        UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
-        SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
-        SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
-        EchoServiceToken: !Ref EchoServiceToken
-      Tags:
-        - Key: Environment
-          Value: !Ref EnvironmentType
-        - Key: prx:cloudformation:stack-name
-          Value: !Ref AWS::StackName
-        - Key: prx:cloudformation:stack-id
-          Value: !Ref AWS::StackId
-      TemplateURL: !Sub ${TemplateUrlPrefix}/networks.yml
-      TimeoutInMinutes: 5
+  # NetworksStack:
+  #   Type: AWS::CloudFormation::Stack
+  #   Properties:
+  #     NotificationARNs:
+  #       - !Ref CloudFormationNotificationArn
+  #     Parameters:
+  #       AlbFullName: !Ref AlbFullName
+  #       AlbHttpsListenerArn: !Ref AlbHttpsListenerArn
+  #       EcsClusterArn: !Ref EcsClusterArn
+  #       VpcId: !Ref VpcId
+  #       VpcCidrBlock: !Ref VpcCidrBlock
+  #       VpcIpv6CidrBlocks: !Ref VpcIpv6CidrBlocks
+  #       SecretsBase: !Ref SecretsBase
+  #       EcrImageTag: !Ref NetworksEcrImageTag
+  #       SecretsVersion: !Ref NetworksSecretsVersion
+  #       EcrRegion: !Ref EcrRegion
+  #       SecretsStackName: !Ref SecretsStackName
+  #       NotificationsStackName: !Ref NotificationsStackName
+  #       EnvironmentType: !Ref EnvironmentType
+  #       EnvironmentTypeAbbreviation: !Ref EnvironmentTypeAbbreviation
+  #       VpcPrivateSubnet1Id: !Ref VpcPrivateSubnet1Id
+  #       VpcPrivateSubnet2Id: !Ref VpcPrivateSubnet2Id
+  #       VpcPrivateSubnet3Id: !Ref VpcPrivateSubnet3Id
+  #       UploadSigningEndpointUrl: !Ref UploadSigningEndpointUrl
+  #       UploadSigningAccessKeyId: !Ref UploadSigningAccessKeyId
+  #       SharedMemcachedEndpointAddress: !Ref SharedMemcachedEndpointAddress
+  #       SharedMemcachedEndpointPort: !Ref SharedMemcachedEndpointPort
+  #       EchoServiceToken: !Ref EchoServiceToken
+  #     Tags:
+  #       - Key: Environment
+  #         Value: !Ref EnvironmentType
+  #       - Key: prx:cloudformation:stack-name
+  #         Value: !Ref AWS::StackName
+  #       - Key: prx:cloudformation:stack-id
+  #         Value: !Ref AWS::StackId
+  #     TemplateURL: !Sub ${TemplateUrlPrefix}/networks.yml
+  #     TimeoutInMinutes: 5
 
   PlayStack:
     Type: AWS::CloudFormation::Stack
